--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 streamlit
 pandas
 numpy
+scipy
 matplotlib
 folium
 streamlit-folium
@@ -20,5 +21,5 @@ fiona
 rtree
 
 # Forecasting
-pmdarima
+pmdarima==2.0.4
 prophet
