--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core
 streamlit
 pandas
-numpy
-scipy
+numpy==1.26.4
+scipy==1.11.4
 matplotlib
 folium
 streamlit-folium
@@ -21,5 +21,6 @@ fiona
 rtree
 
 # Forecasting
+Cython==0.29.36
 pmdarima==2.0.4
 prophet==1.1.5
